# flasher

./: Cargo.toml  build.rs
resources/: menu.ui  resources.gresource.xml
src/: main.rs
